--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,26 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-asgiref=3.2.10=py_0
-brotlipy=0.7.0=py38he774522_1000
-ca-certificates=2020.7.22=0
-certifi=2020.6.20=py38_0
-cffi=1.14.2=py38h7a1dbc1_0
-chardet=3.0.4=py38_1003
-cryptography=3.1=py38h7a1dbc1_0
-dj-database-url=0.5.0=pypi_0
-django=3.0.3=py_0
-django-heroku=0.3.1=pypi_0
-gunicorn=20.0.4=pypi_0
-idna=2.10=py_0
-openssl=1.1.1g=he774522_1
-pip=20.2.2=py38_0
-psycopg2=2.8.5=pypi_0
-pycparser=2.20=py_2
-pyopenssl=19.1.0=py_1
-pysocks=1.7.1=py38_0
-python=3.8.5=he1778fa_0
-pytz=2020.1=py_0
-requests=2.24.0=py_0
-setuptools=49.6.0=py38_0
-six=1.15.0=py_0
-sqlite=3.33.0=h2a8f88b_0
-sqlparse=0.3.1=py_0
-urllib3=1.25.10=py_0
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.16.27012=hf0eaf9b_3
-wheel=0.35.1=py_0
-whitenoise=5.2.0=pypi_0
-win_inet_pton=1.1.0=py38_0
-wincertstore=0.2=py38_0
-zlib=1.2.11=h62dcd97_4
+asgiref==3.2.10
+brotlipy==0.7.0
+certifi==2020.6.20
+cffi==1.14.2
+chardet==3.0.4
+cryptography==3.1
+dj-database-url==0.5.0
+Django==3.0.3
+django-heroku==0.3.1
+gunicorn==20.0.4
+idna==2.10
+pip==20.2.2
+psycopg2==2.8.5
+pycparser==2.20
+pyOpenSSL==19.1.0
+PySocks==1.7.1
+pytz==2020.1
+requests==2.24.0
+setuptools==49.6.0.post20200814
+six==1.15.0
+sqlparse==0.3.1
+urllib3==1.25.10
+wheel==0.35.1
+whitenoise==5.2.0
+win-inet-pton==1.1.0
+wincertstore==0.2
